Changes for 2.1.7

New features:
.......PS. [ZBXNEXT-1633] improved VMware virtual machine monitoring performance (wiper)
..F....... [ZBX-6911] added functionality to save positions of block on dashboard page in profiles table (Vitalij)

Bug fixes:
A.F....... [ZBX-6953] fixed Apache server crashing on Windows due to huge memory consumption when using preg_match() function in Configuration > Host > edit (Ivo)
..F....... [ZBX-7079] fixed undefined index in map configuration page for map without icon mapping (Eduard)
..F....... [ZBX-7111] fixed host importing from 1.8 to trunk (Eduard)
..F....... [ZBX-7074] fixed incorrectly parsed trigger expression in trigger wizard (Vitalij)
..F....... [ZBX-7082] fixed not being able to create dependencies between template triggers (Ivo)
A.F....... [ZBX-7053] fixed errors when deleting a script linked to action operation and fixed type-specific operation command properties not being reset when changing type (Ivo)
..F....... [ZBX-7058] fixed repeated global search with same value (Eduard)
...GI..PS. [ZBX-7061] fixed warnings produced by clang static analyzer (asaveljevs)
..F....... [ZBX-6873] fixed pagination issue after deleting an object through form (Ivo)
..F....... [ZBX-7050] fixed output of empty HTML attributes (Ivo)
A.F....... [ZBX-7051] fixed bug, to not make updates to hosts applications, items, and triggers, if "Save" button was pressed in edit form, with no changes (Vitalij)
A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in page filtering; thanks to Bernhard Schildendorfer from SEC Consult for the report (Eduard, Pavels)
A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in dashboard favourite managing; thanks to Lincoln, a member of Corelan Team, for the report (Eduard, Pavels)
..F....... [ZBX-6994] fixed logic of SQL creation, removed unneeded i.flags IN (0,4) from SQL, if i.flags is set from filter or is null (Vitalij)