@@ -105,17 +105,45 @@ static void	send_signal_handler(int sig)
 		zabbix_log(LOG_LEVEL_WARNING, "timeout while executing operation");
 
 	/* Calling _exit() to terminate the process immediately is important. See ZBX-5732 for details. */
-	_exit(FAIL);
+	_exit(EXIT_FAILURE);
 }
 #endif
 
 typedef struct
 {
-	char		*source_ip, *server;
+	char		*source_ip;
+	char		*server;
 	unsigned short	port;
 	struct zbx_json	json;
 }
 ZBX_THREAD_SENDVAL_ARGS;
+
+#define SUCCEED_PARTIAL	2
+
+/******************************************************************************
+ *                                                                            *
+ * Function: update_exit_status                                               *
+ *                                                                            *
+ * Purpose: manage exit status updates after batch sends                      *
+ *                                                                            *
+ * Comments: SUCCEED_PARTIAL status should be sticky in the sense that        *
+ *           SUCCEED statuses that come after should not overwrite it         *
+ *                                                                            *
+ ******************************************************************************/
+static int	update_exit_status(int old_status, int new_status)
+{
+	if (FAIL == old_status || FAIL == new_status || (unsigned char)FAIL == new_status)
+		return FAIL;
+
+	if (SUCCEED == old_status)
+		return new_status;
+
+	if (SUCCEED_PARTIAL == old_status)
+		return old_status;
+
+	THIS_SHOULD_NEVER_HAPPEN;
+	return FAIL;
+}
 
 /******************************************************************************
  *                                                                            *
@@ -123,10 +151,12 @@ ZBX_THREAD_SENDVAL_ARGS;
  *                                                                            *
  * Purpose: Check whether JSON response is SUCCEED                            *
  *                                                                            *
- * Parameters: result SUCCEED or FAIL                                         *
+ * Parameters: JSON response from Zabbix trapper                              *
  *                                                                            *
  * Return value:  SUCCEED - processed successfully                            *
  *                FAIL - an error occurred                                    *
+ *                SUCCEED_PARTIAL - the sending operation was completed       *
+ *                successfully, but processing of at least one value failed   *
  *                                                                            *
  * Author: Alexei Vladishev                                                   *
  *                                                                            *
@@ -150,8 +180,13 @@ static int	check_response(char *response)
 
 	if (SUCCEED == ret && SUCCEED == zbx_json_value_by_name(&jp, ZBX_PROTO_TAG_INFO, info, sizeof(info)))
 	{
+		int	failed;
+
 		printf("info from server: \"%s\"\n", info);
 		fflush(stdout);
+
+		if (1 == sscanf(info, "processed: %*d; failed: %d", &failed) && 0 < failed)
+			ret = SUCCEED_PARTIAL;
 	}
 
 	return ret;
@@ -183,10 +218,8 @@ static	ZBX_THREAD_ENTRY(send_value, args)
 			if (SUCCEED == (tcp_ret = zbx_tcp_recv(&sock, &answer)))
 			{
 				zabbix_log(LOG_LEVEL_DEBUG, "answer [%s]", answer);
-				if (NULL == answer || SUCCEED != check_response(answer))
+				if (NULL == answer || FAIL == (ret = check_response(answer)))
 					zabbix_log(LOG_LEVEL_WARNING, "incorrect answer from server [%s]", answer);
-				else
-					ret = SUCCEED;
 			}
 		}
 
@@ -278,11 +311,11 @@ static void	parse_commandline(int argc, char **argv)
 				break;
 			case 'h':
 				help();
-				exit(-1);
+				exit(EXIT_SUCCESS);
 				break;
 			case 'V':
 				version();
-				exit(-1);
+				exit(EXIT_SUCCESS);
 				break;
 			case 'I':
 				CONFIG_SOURCE_IP = zbx_strdup(CONFIG_SOURCE_IP, zbx_optarg);
@@ -312,14 +345,14 @@ static void	parse_commandline(int argc, char **argv)
 				REAL_TIME = 1;
 				break;
 			case 'v':
-				if (LOG_LEVEL_WARNING == CONFIG_LOG_LEVEL)
-					CONFIG_LOG_LEVEL = LOG_LEVEL_DEBUG;
-				else
+				if (LOG_LEVEL_WARNING > CONFIG_LOG_LEVEL)
 					CONFIG_LOG_LEVEL = LOG_LEVEL_WARNING;
+				else if (LOG_LEVEL_DEBUG > CONFIG_LOG_LEVEL)
+					CONFIG_LOG_LEVEL = LOG_LEVEL_DEBUG;
 				break;
 			default:
 				usage();
-				exit(FAIL);
+				exit(EXIT_FAILURE);
 				break;
 		}
 	}
@@ -327,7 +360,7 @@ static void	parse_commandline(int argc, char **argv)
 	if (NULL == ZABBIX_SERVER && NULL == CONFIG_FILE)
 	{
 		usage();
-		exit(FAIL);
+		exit(EXIT_FAILURE);
 	}
 }
 
@@ -340,7 +373,7 @@ int	main(int argc, char **argv)
 	FILE			*in;
 	char			in_line[MAX_BUFFER_LEN], hostname[MAX_STRING_LEN], key[MAX_STRING_LEN],
 				key_value[MAX_BUFFER_LEN], clock[32];
-	int			total_count = 0, succeed_count = 0, buffer_count = 0, read_more = 0, ret = SUCCEED;
+	int			total_count = 0, succeed_count = 0, buffer_count = 0, read_more = 0, ret = FAIL;
 	double			last_send = 0;
 	const char		*p;
 	zbx_thread_args_t	thread_args;
@@ -393,12 +426,15 @@ int	main(int argc, char **argv)
 		else if (NULL == (in = fopen(INPUT_FILE, "r")) )
 		{
 			zabbix_log(LOG_LEVEL_WARNING, "cannot open [%s]: %s", INPUT_FILE, zbx_strerror(errno));
-			ret = FAIL;
-			goto exit;
+			goto free;
 		}
 
-		while (NULL != fgets(in_line, sizeof(in_line), in) && SUCCEED == ret)	/* <hostname> <key> [<timestamp>] <value> */
+		ret = SUCCEED;
+
+		while ((SUCCEED == ret || SUCCEED_PARTIAL == ret) && NULL != fgets(in_line, sizeof(in_line), in))
 		{
+			/* line format: <hostname> <key> [<timestamp>] <value> */
+
 			total_count++; /* also used as inputline */
 
 			zbx_rtrim(in_line, "\r\n");
@@ -408,25 +444,28 @@ int	main(int argc, char **argv)
 			if ('\0' == *p || NULL == (p = get_string(p, hostname, sizeof(hostname))) || '\0' == *hostname)
 			{
 				zabbix_log(LOG_LEVEL_WARNING, "[line %d] 'Hostname' required", total_count);
-				continue;
+				ret = FAIL;
+				break;
 			}
 
 			if (0 == strcmp(hostname, "-"))
 			{
-			       if (NULL == ZABBIX_HOSTNAME)
-			       {
-				       zabbix_log(LOG_LEVEL_WARNING, "[line %d] '-' encountered as 'Hostname', "
+				if (NULL == ZABBIX_HOSTNAME)
+				{
+					zabbix_log(LOG_LEVEL_WARNING, "[line %d] '-' encountered as 'Hostname', "
 							"but no default hostname was specified", total_count);
-				       continue;
-			       }
-			       else
-				       zbx_strlcpy(hostname, ZABBIX_HOSTNAME, sizeof(hostname));
+					ret = FAIL;
+					break;
+				}
+				else
+					zbx_strlcpy(hostname, ZABBIX_HOSTNAME, sizeof(hostname));
 			}
 
 			if ('\0' == *p || NULL == (p = get_string(p, key, sizeof(key))) || '\0' == *key)
 			{
 				zabbix_log(LOG_LEVEL_WARNING, "[line %d] 'Key' required", total_count);
-				continue;
+				ret = FAIL;
+				break;
 			}
 
 			if (1 == WITH_TIMESTAMPS)
@@ -434,16 +473,20 @@ int	main(int argc, char **argv)
 				if ('\0' == *p || NULL == (p = get_string(p, clock, sizeof(clock))) || '\0' == *clock)
 				{
 					zabbix_log(LOG_LEVEL_WARNING, "[line %d] 'Timestamp' required", total_count);
-					continue;
+					ret = FAIL;
+					break;
 				}
 			}
 
 			if ('\0' != *p && '"' != *p)
+			{
 				zbx_strlcpy(key_value, p, sizeof(key_value));
+			}
 			else if ('\0' == *p || NULL == (p = get_string(p, key_value, sizeof(key_value))) || '\0' == *key_value)
 			{
 				zabbix_log(LOG_LEVEL_WARNING, "[line %d] 'Key value' required", total_count);
-				continue;
+				ret = FAIL;
+				break;
 			}
 
 			zbx_rtrim(key_value, "\r\n");
@@ -495,7 +538,7 @@ int	main(int argc, char **argv)
 
 				last_send = zbx_time();
 
-				ret = zbx_thread_wait(zbx_thread_start(send_value, &thread_args));
+				ret = update_exit_status(ret, zbx_thread_wait(zbx_thread_start(send_value, &thread_args)));
 
 				buffer_count = 0;
 				zbx_json_clean(&sentdval_args.json);
@@ -504,14 +547,15 @@ int	main(int argc, char **argv)
 				zbx_json_addarray(&sentdval_args.json, ZBX_PROTO_TAG_DATA);
 			}
 		}
-		zbx_json_close(&sentdval_args.json);
 
-		if (0 != buffer_count)
+		if (FAIL != ret && 0 != buffer_count)
 		{
+			zbx_json_close(&sentdval_args.json);
+
 			if (1 == WITH_TIMESTAMPS)
 				zbx_json_adduint64(&sentdval_args.json, ZBX_PROTO_TAG_CLOCK, (int)time(NULL));
 
-			ret = zbx_thread_wait(zbx_thread_start(send_value, &thread_args));
+			ret = update_exit_status(ret, zbx_thread_wait(zbx_thread_start(send_value, &thread_args)));
 		}
 
 		if (in != stdin)
@@ -539,6 +583,8 @@ int	main(int argc, char **argv)
 				break;
 			}
 
+			ret = SUCCEED;
+
 			zbx_json_addobject(&sentdval_args.json, NULL);
 			zbx_json_addstring(&sentdval_args.json, ZBX_PROTO_TAG_HOST, ZABBIX_HOSTNAME, ZBX_JSON_TYPE_STRING);
 			zbx_json_addstring(&sentdval_args.json, ZBX_PROTO_TAG_KEY, ZABBIX_KEY, ZBX_JSON_TYPE_STRING);
@@ -547,22 +593,27 @@ int	main(int argc, char **argv)
 
 			succeed_count++;
 
-			ret = zbx_thread_wait(zbx_thread_start(send_value, &thread_args));
+			ret = update_exit_status(ret, zbx_thread_wait(zbx_thread_start(send_value, &thread_args)));
 		}
-		while(0); /* try block simulation */
+		while (0); /* try block simulation */
 	}
-
+free:
 	zbx_json_free(&sentdval_args.json);
-
-	if (SUCCEED == ret)
-		printf("sent: %d; skipped: %d; total: %d\n", succeed_count, (total_count - succeed_count), total_count);
+exit:
+	if (FAIL != ret)
+	{
+		printf("sent: %d; skipped: %d; total: %d\n", succeed_count, total_count - succeed_count, total_count);
+	}
 	else
 	{
 		printf("Sending failed.%s\n", CONFIG_LOG_LEVEL != LOG_LEVEL_DEBUG ?
 				" Use option -vv for more detailed output." : "");
 	}
-exit:
+
 	zabbix_close_log();
+
+	if (FAIL == ret)
+		ret = EXIT_FAILURE;
 
 	return ret;
 }
